@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST xfce4-panel-4.5.92.tar.bz2 855522 RMD160 1c5da120a61151ee77e309604b08dc81f527fbb9 SHA1 dcc2aa83bb832ee1091152aae245672393ac4be6 SHA256 fc5ed06c4900445428d309335eb3d4d5bde897ba9882ade293fb1e74bc455543
+EBUILD xfce4-panel-4.5.92.ebuild 696 RMD160 91b03849e7f96e7ed14cabbdcbf7aa0884b783ef SHA1 ab6952e275cfb62ab760f068768dc9655efc9228 SHA256 33b85e3c5091849b1608fdff5e14dd4f954b4481eff8e01907ffc52ae2906b11
 EBUILD xfce4-panel-9999.ebuild 705 RMD160 d51f92e0713c764710e5e1db12cb745f322bdc00 SHA1 b44c94c8a8a86c7828b4f17eb092bcc8082a0682 SHA256 685c2c98b4cda87e624ac1a307757ffff2cc05984d4acc3f5c6cfebda8d4f47a
-MISC ChangeLog 1167 RMD160 5466439b615518c82b1806a96901faaadf9ecc20 SHA1 ef3ac6af70ee4de3609291c0f6900e9b01b3766c SHA256 5f463128367f2c8784dcda8220e0b091cf4b647a0999a6b733937eefb93f4778
+MISC ChangeLog 1308 RMD160 4d033dbc3874d6500b06d0272f85dc8f36a52ccc SHA1 13c489c9c91edbaf774721a3cf7b6b8e324a739c SHA256 96c89c047f90e3a02bc59c5fba36c27a495173102ce94c3b4d64d086312f66a0
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXf64ACgkQKhnDs22gwa/m1wCgpwe2Rmk+t6lkA2bmEBLnfNQj
-UI8AoJ2rwM3fZZZHemzDfe8/NhgkoA6Y
-=O/0R
+iEYEARECAAYFAkkdtjwACgkQKhnDs22gwa+QoACgkB+7WpGJz2fxORfg4Pu4+Yhq
+ahYAnRDNeSvr1+nUmDiHnnv7HT+oyR52
+=dk6q
 -----END PGP SIGNATURE-----
